src/inference/models/voxtral_mini_4b_realtime_2602/src/ffi.rs

//! Raw FFI bindings to ggml / ggml-backend / ggml-cuda / gguf.
//!
//! Upstream: llama.cpp `b16de65904ed7e468397f5417ad130f092cba8f4`
//! (pinned in `../../models/qwen35_27b/vendor/llama-cpp.version`).
//!
//! This is a **subset** binding — we only declare the symbols that the
//! lucebox `dflash/src/*.cpp` reference actually calls. Missing
//! symbols are a bug (we hit a linker error) and get added on demand.
//! See `GGML_OPS_USED.md` (TODO) for the full audit.
//!
//! All types are `#[repr(C)]` where they face the C ABI. Opaque
//! structs (`ggml_context`, `ggml_backend`, `ggml_backend_buffer`,
//! `ggml_cgraph`, `ggml_gallocr`, `gguf_context`) are `enum {}` so
//! they can only be used behind pointers.
//!
//! Safety: every call into this crate is `unsafe` at the C boundary.
//! The safe wrappers live in `ctox-dflash27b`.

#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(non_upper_case_globals)]
#![allow(dead_code)]
#![allow(clippy::missing_safety_doc)]

use libc::{c_char, c_int, c_void, size_t};

// ─── Opaque types ─────────────────────────────────────────────────
//
// ggml hides the full definitions of these behind forward declarations
// in its public headers. We match that policy — everything goes
// through pointers.

#[repr(C)]
pub struct ggml_context {
    _private: [u8; 0],
}

#[repr(C)]
pub struct ggml_cgraph {
    _private: [u8; 0],
}

#[repr(C)]
pub struct ggml_gallocr {
    _private: [u8; 0],
}

#[repr(C)]
pub struct ggml_backend {
    _private: [u8; 0],
}
pub type ggml_backend_t = *mut ggml_backend;

#[repr(C)]
pub struct ggml_backend_buffer {
    _private: [u8; 0],
}
pub type ggml_backend_buffer_t = *mut ggml_backend_buffer;

#[repr(C)]
pub struct ggml_backend_buffer_type {
    _private: [u8; 0],
}
pub type ggml_backend_buffer_type_t = *mut ggml_backend_buffer_type;

#[repr(C)]
pub struct ggml_backend_sched {
    _private: [u8; 0],
}

#[repr(C)]
pub struct gguf_context {
    _private: [u8; 0],
}

// ─── Enums ────────────────────────────────────────────────────────

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum ggml_type {
    GGML_TYPE_F32 = 0,
    GGML_TYPE_F16 = 1,
    GGML_TYPE_Q4_0 = 2,
    GGML_TYPE_Q4_1 = 3,
    // ggml_type enum has gaps — kept sparse to match the upstream
    // header exactly. The values we actually consume for qwen3.5-27B:
    GGML_TYPE_Q8_0 = 8,
    GGML_TYPE_Q2_K = 10,
    GGML_TYPE_Q3_K = 11,
    GGML_TYPE_Q4_K = 12,
    GGML_TYPE_Q5_K = 13,
    GGML_TYPE_Q6_K = 14,
    GGML_TYPE_Q8_K = 15,
    GGML_TYPE_IQ2_XXS = 16,
    GGML_TYPE_IQ2_XS = 17,
    GGML_TYPE_IQ3_XXS = 18,
    GGML_TYPE_IQ1_S = 19,
    GGML_TYPE_IQ4_NL = 20,
    GGML_TYPE_IQ3_S = 21,
    GGML_TYPE_IQ2_S = 22,
    GGML_TYPE_IQ4_XS = 23,
    GGML_TYPE_I8 = 24,
    GGML_TYPE_I16 = 25,
    GGML_TYPE_I32 = 26,
    GGML_TYPE_I64 = 27,
    GGML_TYPE_F64 = 28,
    GGML_TYPE_IQ1_M = 29,
    GGML_TYPE_BF16 = 30,
    GGML_TYPE_COUNT = 39,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub enum ggml_status {
    GGML_STATUS_ALLOC_FAILED = -2,
    GGML_STATUS_FAILED = -1,
    GGML_STATUS_SUCCESS = 0,
    GGML_STATUS_ABORTED = 1,
}

// `ggml_op` has ~100 entries; we only declare the ones the reference
// uses. The numeric values must match ggml.h — if upstream reorders
// the enum we need to resync.
pub const GGML_OP_NONE: c_int = 0;
pub const GGML_OP_MUL_MAT: c_int = 28;
// Actual numbers come from the version pinned in llama-cpp.version.
// We don't rely on these constants directly — graph ops are set via
// the helper builders (ggml_mul_mat etc.) which set .op internally.

// RoPE mode flags. Passed to ggml_rope_ext's `mode` arg.
pub const GGML_ROPE_TYPE_NORMAL: c_int = 0;
pub const GGML_ROPE_TYPE_NEOX: c_int = 2;
pub const GGML_ROPE_TYPE_MROPE: c_int = 8;
pub const GGML_ROPE_TYPE_VISION: c_int = 24;

// ggml_tri masking variant. Values match enum order in ggml.h.
pub const GGML_TRI_TYPE_UPPER_DIAG: c_int = 0;
pub const GGML_TRI_TYPE_UPPER: c_int = 1;
pub const GGML_TRI_TYPE_LOWER_DIAG: c_int = 2;
pub const GGML_TRI_TYPE_LOWER: c_int = 3;

pub const GGUF_TYPE_INT32: c_int = 5;
pub const GGUF_TYPE_STRING: c_int = 8;
pub const GGUF_TYPE_ARRAY: c_int = 9;

// ─── ggml_tensor ──────────────────────────────────────────────────
//
// The public `ggml_tensor` struct IS exposed by upstream (in ggml.h)
// because graph-building code needs to read `->ne`, `->nb`, `->data`,
// `->type`, etc. We mirror the exact layout. Any field reorder
// upstream is a silent ABI break — pin against the checked-in
// `llama-cpp.version` commit.
//
// On the pinned commit the struct is:
//
// ```c
// struct ggml_tensor {
//     enum ggml_type         type;
//     struct ggml_backend_buffer * buffer;
//     int64_t                ne[4];
//     size_t                 nb[4];
//     enum ggml_op           op;
//     int32_t                op_params[16];
//     int32_t                flags;
//     struct ggml_tensor   * src[10];
//     struct ggml_tensor   * view_src;
//     size_t                 view_offs;
//     void                 * data;
//     char                   name[64];
//     void                 * extra;
//     char                   padding[8];
// };
// ```
//
// Size: 368 bytes on x86_64 Linux. Verified at runtime via
// `assert_eq!(std::mem::size_of::<ggml_tensor>(), 368)` — see
// tests/abi.rs.

pub const GGML_MAX_DIMS: usize = 4;
pub const GGML_MAX_OP_PARAMS: usize = 16;
pub const GGML_MAX_SRC: usize = 10;
pub const GGML_MAX_NAME: usize = 64;

#[repr(C)]
pub struct ggml_tensor {
    pub type_: ggml_type,
    pub buffer: ggml_backend_buffer_t,
    pub ne: [i64; GGML_MAX_DIMS],
    pub nb: [size_t; GGML_MAX_DIMS],
    pub op: c_int, // ggml_op enum, opaque here
    pub op_params: [i32; GGML_MAX_OP_PARAMS],
    pub flags: i32,
    pub src: [*mut ggml_tensor; GGML_MAX_SRC],
    pub view_src: *mut ggml_tensor,
    pub view_offs: size_t,
    pub data: *mut c_void,
    pub name: [c_char; GGML_MAX_NAME],
    pub extra: *mut c_void,
    pub padding: [c_char; 8],
}

// ─── ggml_init ────────────────────────────────────────────────────

#[repr(C)]
#[derive(Copy, Clone)]
pub struct ggml_init_params {
    pub mem_size: size_t,
    pub mem_buffer: *mut c_void,
    pub no_alloc: bool,
}

// ─── Function declarations ────────────────────────────────────────

extern "C" {
    // Context lifecycle.
    pub fn ggml_init(params: ggml_init_params) -> *mut ggml_context;
    pub fn ggml_free(ctx: *mut ggml_context);
    pub fn ggml_tensor_overhead() -> size_t;

    // Tensor introspection + naming.
    pub fn ggml_nbytes(t: *const ggml_tensor) -> size_t;
    pub fn ggml_element_size(t: *const ggml_tensor) -> size_t;
    pub fn ggml_row_size(t: ggml_type, ne: i64) -> size_t;
    pub fn ggml_type_size(t: ggml_type) -> size_t;
    pub fn ggml_type_name(t: ggml_type) -> *const c_char;
    pub fn ggml_set_name(t: *mut ggml_tensor, name: *const c_char);
    pub fn ggml_get_name(t: *const ggml_tensor) -> *const c_char;
    pub fn ggml_set_output(t: *mut ggml_tensor);
    pub fn ggml_nelements(t: *const ggml_tensor) -> i64;
    pub fn ggml_get_first_tensor(ctx: *const ggml_context) -> *mut ggml_tensor;
    pub fn ggml_get_next_tensor(
        ctx: *const ggml_context,
        cur: *const ggml_tensor,
    ) -> *mut ggml_tensor;
    pub fn ggml_is_contiguous(t: *const ggml_tensor) -> bool;

    // View ops (metadata only — no device work). Each view tensor
    // borrows from `a`'s buffer; the reference passes explicit byte
    // strides (`nb1`/`nb2`/`nb3`) and a byte offset.
    pub fn ggml_view_1d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
        offset: size_t,
    ) -> *mut ggml_tensor;
    pub fn ggml_view_2d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
        ne1: i64,
        nb1: size_t,
        offset: size_t,
    ) -> *mut ggml_tensor;
    pub fn ggml_view_3d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
        ne1: i64,
        ne2: i64,
        nb1: size_t,
        nb2: size_t,
        offset: size_t,
    ) -> *mut ggml_tensor;
    pub fn ggml_view_4d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
        ne1: i64,
        ne2: i64,
        ne3: i64,
        nb1: size_t,
        nb2: size_t,
        nb3: size_t,
        offset: size_t,
    ) -> *mut ggml_tensor;

    // Reshapes (metadata only — no device work).
    pub fn ggml_reshape_1d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
    ) -> *mut ggml_tensor;
    pub fn ggml_reshape_2d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
        ne1: i64,
    ) -> *mut ggml_tensor;
    pub fn ggml_reshape_3d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
        ne1: i64,
        ne2: i64,
    ) -> *mut ggml_tensor;
    pub fn ggml_reshape_4d(
        ctx: *mut ggml_context,
        a: *mut ggml_tensor,
        ne0: i64,
        ne1: i64,
        ne2: i64,
        ne3: i64,
    ) -> *mut ggml_tensor;

    // Tensor construction.
    pub fn ggml_new_tensor_1d(
        ctx: *mut ggml_context,
        type_: ggml_type,
        ne0: i64,
    ) -> *mut ggml_tensor;
    pub fn ggml_new_tensor_2d(
        ctx: *mut ggml_context,
        type_: ggml_type,
        ne0: i64,
        ne1: i64,
    ) -> *mut ggml_tensor;
    pub fn ggml_new_tensor_3d(
        ctx: *mut ggml_context,
        type_: ggml_type,
        ne0: i64,
        ne1: i64,
        ne2: i64,
    ) -> *mut ggml_tensor;
    pub fn ggml_new_tensor_4d(
        ctx: *mut ggml_context,
        type_: ggml_type,
        ne0: i64,
        ne1: i64,
        ne2: i64,
        ne3: i64,
    ) -> *mut ggml_tensor;
